--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,11 +3,13 @@ FROM node:18
 WORKDIR /app
 
 COPY package*.json ./
-
 RUN npm install
 
 COPY . .
 
+# rendre exécutable
+RUN chmod +x ./entrypoint.sh
+
 EXPOSE 3001
 
-CMD ["node", "api/index.js"]
+CMD ["./entrypoint.sh"]
